Refactoring LoginController anottations
